# OneTapGOV

./: .coverage  .dockerignore  .env  .env.example  .gitignore  ARCHITECTURE_ASSESSMENT.md  DEPLOYMENT.md  Dockerfile  Makefile  NOTIFICATIONS_IMPLEMENTATION.md  NOTIFICATIONS_SETUP.md  README.md  alembic.ini  docker-compose.celery.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/__pycache__/: __init__.cpython-312.pyc.1917120570128  __init__.cpython-312.pyc.2220092497120  (+1 more)
backend/: .gitignore  README.md  requirements.txt  run_pytest_simple.py  test_signup.py
deploy/: supabase.sql
migrations/: env.py
onetapgov_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: push_to_github.ps1  push_to_github.sh  run_tests_no_cov.ps1  run_tests_no_cov.py  run_tests_no_cov.sh  seed.py
tests/: conftest.py  test_admin_and_recommendations.py  test_admin_service.py  test_api_eligibility.py  test_api_flow.py  test_eligibility_edges.py  test_eligibility_integration.py  test_eligibility_service.py  test_engines.py  test_extraction.py  test_helper_sheets.py  test_notification_providers.py  test_notification_providers_additional.py  test_ocr.py  test_rbac.py  test_recommendation_service.py  test_recommendations.py  test_rule_engine.py  test_rules_engine.py  test_saved_schemes.py  test_schemes_service.py  test_security_and_schemas.py  test_service_edges.py  test_storage_s3.py  test_storage_s3_moto.py  test_supabase_auth.py  test_supabase_translation.py  test_upload_and_extraction.py  test_utils.py  test_workers.py
(+234 files in other folders)
